--- a/bilimKurgu.html
+++ b/bilimKurgu.html
@@ -25,52 +25,54 @@
 </head>
 <body id="bg">
 <!--Nav-->
-  <nav class="navbar navbar-expand">
-          <a class="navbar-brand" id="lg" href="./index.html">SDK</a>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="a">
-                    Menü
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="./kitaplar.html">Kitaplar</a></li>
-                    <li><a class="dropdown-item" href="./yayinEvleri.html">Yayın Evleri</a></li>
-                    <li><a class="dropdown-item" href="./yazarlar.html">Yazar</a></li>
-                  </ul>
-                </li>
-            </ul>
-                <div class="container-fluid" id="search">
-                    <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline" type="submit">Ara</button>
-                    </form>
-                </div>
-                
-                <div class="container-fluid col-3" id="btn">
-                    <form class="d-flex">
-                      <button class="btn btn-outline" type="submit">
-                        <a href="register.html">
-                          Üye Ol
-                        </a>
-                      </button>
-                      <button class="btn btn-outline" type="submit">
-                        <a href="logIn.html">
-                          Giriş Yap
-                        </a>
-                      </button>
-                    </form>
-                </div>
-          </div>
-  </nav>
-
-  <div class="block">
-        <a href="./kitaplar.html" class="text">Kitaplar</a>
-        <p class="text">|</p>
-        <a href="./yayinEvleri.html" class="text">Yayın Evleri</a>
-        <p class="text">|</p>
-        <a href="./yazarlar.html" class="text">Yazar</a>
+<nav class="navbar navbar-expand">
+  <a class="navbar-brand" id="lg" href="./index.html">SDK</a>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="a">
+            Menü
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="./kitaplar.html">Kitaplar</a></li>
+            <li><a class="dropdown-item" href="./yayinEvleri.html">Yayın Evleri</a></li>
+            <li><a class="dropdown-item" href="./yazarlar.html">Yazar</a></li>
+            <li><a class="dropdown-item" href="./register.html">Üye Ol</a></li>
+            <li><a class="dropdown-item" href="./logIn.html">Giriş Yap</a></li>
+          </ul>
+        </li>
+    </ul>
+        <div id="search">
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline" type="submit">Ara</button>
+            </form>
+        </div>
+        
+        <div class="container-fluid col-5" id="btn">
+            <form class="d-flex">
+              <button class="btn btn-outline" type="submit">
+                <a href="register.html">
+                  Üye Ol
+                </a>
+              </button>
+              <button class="btn btn-outline" type="submit">
+                <a href="logIn.html">
+                  Giriş Yap
+                </a>
+              </button>
+            </form>
+        </div>
   </div>
+</nav>
+
+<div class="block col-lg-12">
+<a href="./kitaplar.html" class="text">Kitaplar</a>
+<p class="text">|</p>
+<a href="./yayinEvleri.html" class="text">Yayın Evleri</a>
+<p class="text">|</p>
+<a href="./yazarlar.html" class="text">Yazar</a>
+</div>
 <!--Nav-->
 
 <!--Main-->
@@ -267,56 +269,56 @@
 <!--Main-->
 
 <!-- Footer -->
-<footer>
-    <div class="ftr-top">
-      <div class="footer-box">
-        <h4>Kategoeriler</h4>
-        <ul>
-          <li>Kitaplar</li>
-          <li>YayınEvleri</li>
-          <li>Yazar Listesi</li>
-        </ul>
-      </div>
-  
-      <div class="footer-box">
-        <h4>Önemli Bilgiler</h4>
-        <ul>
-          <li>Hakkımızda</li>
-          <li>Kişisel Verilerin Korunması</li>
-          <li>Teslimat Koşulları</li>
-          <li>Satış Sözleşmesi</li>
-          <li>Garanti ve İade Koşulları</li>
-        </ul>
-      </div>
-  
-      <div class="footer-box">
-        <h4>Hızlı Erişim</h4>
-        <ul>
-          <li>İletişim</li>
-          <li>Mağazalarımız</li>
-          <li>Yeni Çıkan Kitaplar</li>
-          <li>Çok Satan Kitaplar</li>
-          <li>İşlem Rehberi</li>
-        </ul>
-      </div>
-  
-      <div class="footer-box">
-        <h4>Üye</h4>
-        <ul>
-          <li>Sık Sorulan Sorular</li>
-          <li>Yeni Üyelik</li>
-          <li>Üye Girişi</li>
-        </ul>
-      </div>
-
+<footer class="col-lg-12 col-12">
+  <div class="ftr-top">
+    <div class="footer-box">
+      <h4>Kategoeriler</h4>
+      <ul>
+        <li>Kitaplar</li>
+        <li>YayınEvleri</li>
+        <li>Yazar Listesi</li>
+      </ul>
     </div>
 
-    <div class="ftr-btm">
-      <p>
-        <span> SDK </span> Ticaret Sistemleriyle Hazırlanmıştır.
-      </p>
+    <div class="footer-box">
+      <h4>Önemli Bilgiler</h4>
+      <ul>
+        <li>Hakkımızda</li>
+        <li>Kişisel Verilerin Korunması</li>
+        <li>Teslimat Koşulları</li>
+        <li>Satış Sözleşmesi</li>
+        <li>Garanti ve İade Koşulları</li>
+      </ul>
     </div>
-  </footer>
+
+    <div class="footer-box">
+      <h4>Hızlı Erişim</h4>
+      <ul>
+        <li>İletişim</li>
+        <li>Mağazalarımız</li>
+        <li>Yeni Çıkan Kitaplar</li>
+        <li>Çok Satan Kitaplar</li>
+        <li>İşlem Rehberi</li>
+      </ul>
+    </div>
+
+    <div class="footer-box">
+      <h4>Üye</h4>
+      <ul>
+        <li>Sık Sorulan Sorular</li>
+        <li>Yeni Üyelik</li>
+        <li>Üye Girişi</li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="ftr-btm">
+    <p>
+      <span> SDK </span> Ticaret Sistemleriyle Hazırlanmıştır.
+    </p>
+  </div>
+</footer>
 <!-- Footer -->
 
 <script src="bilimKurgu.js"></script>
